# economic-evolution-lab

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: rbc.yaml
data/: fred_nk_1960-01-01_2019-12-31.csv  fred_nk_1985-01-01_2019-12-31.csv
eel/: figstyle.py
eel/data/: fred.py
eel/econ_eval/: core.py  demo.py
eel/econ_eval/tasks/: determinacy.py
eel/evaluation/: adaptation.py  clark_west.py  giacomini_white.py  nk_forecast.py
eel/expectations/: learning.py
eel/models/macro/: nk_dsge.py  rbc.py
eel/solve/: perturbation.py
experiments/: fig_size_curve.py  fig_size_gate.py  nk_phase2_findings.md  nk_phase2b_adaptation.py  nk_phase2b_findings.md  nk_re_vs_learning.py  size_check_restrictions.py
tests/: test_adaptation.py  test_clark_west.py  test_econ_eval.py  test_giacomini_white.py  test_info_symmetry.py  test_learning.py  test_nk_dsge.py  test_rbc.py
