[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eel"
version = "0.1.0"
description = "Economic Evolution Lab — formalized, solvable, auditable economic models"
authors = [{ name = "Elizabeth Ospina" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pandas-datareader>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["eel*"]
